# master_thesis

./: Define_the_expert_PFSM.ipynb  Vector_field_sample_generation.ipynb
Imitation/Irace/wassertein_conf/: scenario.txt  target-runner
compareHoming/include/: ArgosSimulation_forcomparation.h
compareHoming/src/: ArgosSimulation_forcomparation.cpp  main.cpp
optimalbins/: CMakeLists.txt
optimalbins/include/: bin_width_optimizer.h  data_loader.h  vector_field.h
optimalbins/src/: bin_width_optimizer.cpp  data_loader.cpp  main.cpp  vector_field.cpp
simulate_mission/: CMakeLists.txt
simulate_mission/include/: ArgosSimulation.h
simulate_mission/src/: ArgosSimulation.cpp  main.cpp
tda/: CMakeLists.txt
tda/include/: ChampVectoriel.h  ChampVectorielData.h  ChampVectorielGenerateur.h  ChampVectorielGenerateurWO.h  HelmholtzHodgeDecomposition.h  Silhouette.h  data_loader.h  hhd_analysis.h  persistence_calculator.h  surface_analysis.h
tda/src/: ChampVectoriel.cpp  analyze_topology.cpp  analyze_topologyWO.cpp  data_loader.cpp  main.cpp  mainWO.cpp  main_extended.cpp
tda_c_fda/: CMakeLists.txt
tda_c_fda/include/: ChampVectorielConcatenateur.h  ChampVectorielUtils.h  Silhouette.h  SimulationProcessor.h  curve_utils.hpp  dp_utils.hpp  energy_utils.hpp  fdacurve.hpp  interpolation.hpp  karcher_utils.hpp  projection.hpp  silhouette_analyzer.h  silhouette_utils.h  srvf.hpp
tda_c_fda/src/: SimulationProcessor.cpp  analyze_topology_test.cpp  main.cpp  main_test.cpp  persistence_analyser.cpp  validation_test.cpp
